connect register to backend and get token

--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
+  
+
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.22.11"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
