--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-moment": "^1.1.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
@@ -46,8 +46,6 @@
       "last 1 safari version"
     ]
   },
-  
-
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.22.11"
   },
